# iainpare-superapp

./: .gitignore  README.md
backend-django/: .env.example  .env.local  .env.prod  .gitignore  README.md  manage.py  pyproject.toml  pyproject.toml.txt  tasks.py
backend-django/apps/accounts/: admin.py  models.py  permissions.py  schema.py  selectors.py  services.py  types.py
backend-django/apps/accounts/fixtures/: initial_roles.json
backend-django/apps/accounts/migrations/: 0001_initial.py  0002_permission_role_user_role.py  0003_remove_user_role_user_roles_alter_role_permissions.py  0004_module_role_modules.py  0005_remove_module_description.py  0006_user_avatar.py
backend-django/apps/accounts/schema/: __init__.py  auth_schema.py  module_schema.py  permission_schema.py  role_schema.py  user_schema.py
backend-django/apps/accounts/selectors/: __init__.py  module_selector.py  permission_selector.py  role_selector.py  user_selector.py
backend-django/apps/accounts/services/: __init__.py  auth_service.py  module_service.py  permission_service.py  role_service.py  user_service.py
backend-django/apps/core/: middleware.py  schema.py
backend-django/apps/lppm/: apps.py  types.py
backend-django/apps/lppm/migrations/: 0001_initial.py  0002_publikasi_karya_ilmiah.py  0002_remove_penelitian_tahun_kegiatan_and_more.py  0003_penelitian_tahun_pengabdian_tahun_publikasi_tahun.py  0003_strategicgoal_strategicsource_strategicobjective_and_more.py  0004_remove_penelitian_peneliti_and_more.py  0004_strategicaction_unit.py  0005_alter_strategicaction_unit.py  (+1 more)
backend-django/apps/people/: types.py
backend-django/apps/references/: apps.py  types.py
backend-django/backend/: schema.py  settings.py  settings.txt  urls.py
backend-django/backend/settings/: base.py  dev.py  prod.py
backend-django/schema/: mutation.py  query.py  schema.py
(+371 files in other folders)
