[project]
name = "superapp-backend-django"
version = "0.1.0"
description = "Backend service for Superapp using Django and Strawberry GraphQL"
authors = [
    {name = "Ade Musytahun Wahid",email = "ademusytahunwahid@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "strawberry-graphql-django (>=0.65.1,<0.66.0)",
    "django-choices-field (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
